# 1920UnitedFront

./: .gitignore  AGENTS.md  AI_TEST_PROMPT_EVOLUTION_EXPERIMENT.md  CMakeLists.txt  DELIVERY_SUMMARY.md  GITHUB_SUBMIT_GUIDE.md  GIT_COMMIT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TASK_COMPLETION_REPORT.md  TEST_SUMMARY.md  build_with_tests.bat  mud-game-protocol.yaml  test_new_tests.bat  validate_ci.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
.qwen/: settings.json  settings.json.orig
api/: mud-game-protocol.yaml
docs/: CI_CD_DEVELOPMENT.md  McCabe_Cyclomatic_Complexity_Analysis.md  NEW_TESTS_GUIDE.md  PAD_NS_Diagrams_Method_Signatures.md  call_graph.md  class_diagram.md  core_use_cases.md  design_review_refactor.md  sequence_diagram_combat.md
include/client/: MudClient.h
include/combat/: Combat.h  Monster.h
include/command/: AttackCommand.h  CommandHandler.h  CommandRegistry.h  DeleteCommand.h  FleeCommand.h  HelpCommand.h  ICommand.h  InventoryCommand.h  KillCommand.h  LoadCommand.h  LookCommand.h  MoveCommand.h  NameCommand.h  QuitCommand.h  SaveCommand.h  SavesCommand.h  SayCommand.h  ScoreCommand.h  WhoCommand.h
include/connection/: Connection.h
include/event/: EventBus.h  Events.h
include/inventory/: Inventory.h
include/network/: Network.h
include/player/: Player.h
include/save/: SaveManager.h
include/server/: MudServer.h  Session.h
include/shop/: Shop.h
include/strategy/: DamageStrategy.h
include/world/: Room.h
src/: main_client.cpp  main_server.cpp
src/client/: MudClient.cpp
src/combat/: Combat.cpp  Monster.cpp
src/command/: AttackCommand.cpp  CommandHandler.cpp  CommandRegistry.cpp  DeleteCommand.cpp  FleeCommand.cpp  HelpCommand.cpp  InventoryCommand.cpp  KillCommand.cpp  LoadCommand.cpp  LookCommand.cpp  MoveCommand.cpp  NameCommand.cpp  QuitCommand.cpp  SaveCommand.cpp  SavesCommand.cpp  SayCommand.cpp  ScoreCommand.cpp  WhoCommand.cpp
src/connection/: Connection.cpp
src/event/: EventBus.cpp
src/inventory/: Inventory.cpp
src/network/: Network.cpp
src/player/: Player.cpp
src/save/: SaveManager.cpp
src/server/: MudServer.cpp  Session.cpp
src/shop/: Shop.cpp
src/strategy/: DamageStrategy.cpp
src/world/: Room.cpp
tests/: test_combat_calculation.cpp  test_combat_manager.cpp  test_command_registry_extended.cpp  test_commands.cpp  test_damage_strategy.cpp  test_event_bus.cpp  test_inventory.cpp  test_monster.cpp  test_player.cpp  test_room.cpp  test_save_manager.cpp  test_shop.cpp
